[project]
name = "psp-vdf"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "argparse>=1.4.0",
    "cdflib>=1.3.7",
    "cflib>=0.1.30",
    "matplotlib>=3.10.8",
    "normflows>=1.7.3",
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "plotly>=6.5.0",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
]
